Fix menu non alignment around 1024px on x

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -274,6 +274,7 @@ header .menu div img:hover {
 
 .menu-center>* {
     flex-basis: 100%;
+    min-width: 0%;
 }
 
 .menu-center .menu-left{
